# Todolist

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  docker-compose-debug.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  requiremets.txt
.github/workflows/: deploy_on_main.yaml  push_any_except_main.yaml
.pgadmin/: pgadmin4.db
.pgadmin/sessions/: 06076bcb-3ac7-48b4-afa2-83ec3c8704c9  67248ff7-3381-4b04-9685-66411335d996  d0a46e6a-2610-41c3-af16-287a760ce3e6
bot/: admin.py  models.py  serializers.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  schemas.py
deploy/: docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py
tests/boards/: test_board_create_view.py  test_board_view.py
tests/categories/: test_category_create_view.py  test_category_view.py
tests/goals/: test_goal_create_view.py
todolist/: fields.py  settings.py  urls.py
todolist/core/: admin.py  apps.py  fields.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goalcomment.py  0003_alter_goalcomment_options_alter_goalcomment_created_and_more.py  0004_alter_goalcomment_options_alter_goalcomment_created_and_more.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py  0008_alter_goalcategory_board.py  0009_create_new_objects_1.py
